Added Google OAUTH 2.0 and AWS S3