@@ -8,6 +8,10 @@ import java.util.List;
 import java.util.Optional;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -18,19 +22,24 @@ import org.springframework.web.context.request.RequestContextHolder;
 import org.springframework.web.context.request.ServletRequestAttributes;
 
 import com.sprk.imagegallery.configuration.ImageUtil;
+import com.sprk.imagegallery.model.ImageModel;
 import com.sprk.imagegallery.model.RoleModel;
 import com.sprk.imagegallery.model.UserDTO;
 import com.sprk.imagegallery.model.UserModel;
+import com.sprk.imagegallery.repository.ImageRepository;
 import com.sprk.imagegallery.repository.RoleRepository;
 import com.sprk.imagegallery.repository.UserRepository;
 
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpSession;
 import jakarta.transaction.Transactional;
+import lombok.extern.slf4j.Slf4j;
 
 @Service
+@Slf4j
 public class UserServiceImpl implements UserService {
 
+    private final int PAGE_SIZE = 3;
     @Autowired
     private UserRepository userRepository;
 
@@ -38,14 +47,15 @@ public class UserServiceImpl implements UserService {
     private RoleRepository roleRepository;
 
     @Autowired
-    private BCryptPasswordEncoder bCryptPasswordEncoder;
+    private ImageRepository imageRepository;
+
+    @Autowired
+    private S3Service s3Service;
 
     @Override
     public UserModel saveUser(UserModel userModel) {
 
-        String encodedPassword = bCryptPasswordEncoder.encode(userModel.getPassword());
-        userModel.setRoles(Arrays.asList(roleRepository.findByName("ROLE_USER").getFirst()));
-        userModel.setPassword(encodedPassword);
+        userModel.setRoles(Arrays.asList(roleRepository.findByName("ROLE_USER").get(0)));
         UserModel savedUser = userRepository.save(userModel);
         return savedUser;
     }
@@ -81,6 +91,13 @@ public class UserServiceImpl implements UserService {
 
     @Override
     public void deleteUser(UserModel userModel) {
+        // Delete all images in S3 bucket also implementd in service
+
+        List<ImageModel> images = imageRepository.findByUserModel(userModel);
+        for (ImageModel image : images) {
+            s3Service.deleteFile(image.getUrl());
+        }
+
         userRepository.delete(userModel);
     }
 
@@ -113,6 +130,7 @@ public class UserServiceImpl implements UserService {
 
         UserModel dbUserModel = userRepository.findByEmail(username);
         if (dbUserModel != null) {
+            log.info("User found: {}", dbUserModel);
             Collection<SimpleGrantedAuthority> authorities = mapRolesToAuthorities(dbUserModel.getRoles());
             return new User(dbUserModel.getEmail(), dbUserModel.getPassword(), authorities);
         } else {
@@ -131,8 +149,12 @@ public class UserServiceImpl implements UserService {
 
     // Methods For Admin
     @Override
-    public List<UserModel> getAllUsers() {
-        return userRepository.findAll();
+    public Page<UserModel> getAllUsers(int pageNum, String sortField, String sortDir) {
+        Sort sort = sortDir.equalsIgnoreCase(Sort.Direction.ASC.name()) ? Sort.by(sortField).ascending()
+                : Sort.by(
+                        sortField).descending();
+        Pageable pageable = PageRequest.of(pageNum - 1, PAGE_SIZE, sort);
+        return userRepository.findAll(pageable);
     }
 
     @Override
